--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-07-02  Martin Baulig  <martin@ximian.com>
 
+	* backends/ThreadManager.cs (ThreadManager.AcquireGlobalThread):
+	Fixed a bad deadlock.
+
+2004-07-02  Martin Baulig  <martin@ximian.com>
+
 	* backends/server/mutex.c (DebuggerEvent): New typedef.
 	(mono_debugger_event_new): New function.
 	(mono_debugger_event_wait): New function.
