2004-07-06  Martin Baulig  <martin@ximian.com>
	* backends/mono-csharp/MonoCSharpLanguageBackend.cs
	(MonoSymbolTable): Derive from SymbolTable.
	(MonoSymbolTable.WrapperMethod): New private class; we now get the
	icall wrappers from the JIT.

	* classes/SymbolTableManager.cs
	(SymbolTableManager.AddSymbolTable): New public method.

svn path=/trunk/debugger/; revision=30768

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-07-06  Martin Baulig  <martin@ximian.com>
+
+	* backends/mono-csharp/MonoCSharpLanguageBackend.cs
+	(MonoSymbolTable): Derive from SymbolTable.
+	(MonoSymbolTable.WrapperMethod): New private class; we now get the
+	icall wrappers from the JIT.
+
+	* classes/SymbolTableManager.cs
+	(SymbolTableManager.AddSymbolTable): New public method.
+
 2004-07-02  Martin Baulig  <martin@ximian.com>
 
 	* backends/server/i386-arch.c (i386_arch_child_stopped): Reset
