--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-12  Martin Baulig  <martin@ximian.com>
+
+	* backends/mono-csharp/MonoCSharpLanguageBackend.cs: Reflect
+	latest runtime changes.
+
 2004-07-07  Martin Baulig  <martin@ximian.com>
 
 	* backends/SingleSteppingEngine.cs
