--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-05  Chris Toshok  <toshok@ximian.com>
+
+	* frontends/scripting/Expression.cs: correct message for zero
+	length array accesses.
+
 2004-09-24  Martin Baulig  <martin@ximian.com>
 
 	* backends/server/i386-ptrace.c (server_ptrace_finalize): Don't
