--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-10-20  Martin Baulig  <martin@ximian.com>
+
+	* arch/BfdDisassembler.cs (BfdDisassembler.print_address_func):
+	Always include the address, even if we have a function name.
+
 2004-10-18  Chris Toshok  <toshok@ximian.com>
 
 	* frontends/scripting/Expression.cs (StructAccessExpression):
