--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-10-20  Martin Baulig  <martin@ximian.com>
 
+	* backends/mono-csharp/MonoCSharpLanguageBackend.cs
+	(MonoMethod.RegisterLoadHandler): Pass the full method signature
+	to the JIT; fixes #68527.
+
+2004-10-20  Martin Baulig  <martin@ximian.com>
+
 	* arch/BfdDisassembler.cs (BfdDisassembler.print_address_func):
 	Always include the address, even if we have a function name.
 
