--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-21  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/ILanguage.cs
+	(ILanguage.ExceptionType): New public property.
+
+2004-10-21  Martin Baulig  <martin@ximian.com>
+
 	* backends/mono-csharp/MonoCSharpLanguageBackend.cs
 	(MonoSymbolTable.GetTypeFromClass): Added `Type type' argument; if
 	we can't find the class for some reason, print a warning and
