2004-10-21  Martin Baulig  <martin@ximian.com>
	* frontends/scripting/Command.cs (CatchCommand): New command.

svn path=/trunk/debugger/; revision=35205

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-10-21  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/Command.cs (CatchCommand): New command.
+
+2004-10-21  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/ILanguage.cs
 	(ILanguage.ExceptionType): New public property.
 
