--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-22  Martin Baulig  <martin@ximian.com>
+
+	* tests/: Updated the tests and made them work again.
+
 2004-10-22  Chris Toshok  <toshok@ximian.com>
 
 	* frontends/scripting/Style.cs (NativeStyle.FormatMethod): fix the
